deps/v8/test/message/mjsunit/fail/assert-promise-result-rejects-with-throw-empty.out
test/mjsunit/mjsunit.js:{NUMBER}: Error: Reject with callback
              throw concatenateErrors(stack, e);
              ^
Error
    at assertPromiseResult (test/mjsunit/mjsunit.js:{NUMBER}:{NUMBER})
    at *%(basename)s:12:1

Error: Reject with callback
    at concatenateErrors (test/mjsunit/mjsunit.js:{NUMBER}:{NUMBER})
    at _ (test/mjsunit/mjsunit.js:{NUMBER}:{NUMBER})
